--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                     <div class="info">
                         <h3>email</h3>
-                        <p>ahmedelnaseh909@gmail.com</p>
+                        <p id="email">ahmedelnaseh909@gmail.com</p>
                     </div>
                 </div>
             </div>
