--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         
         <section class="main">
             <div>
-                <h2>Hello & welcome to my personal portfolio<br><span>Web developer</span></h2>
-                <h3>Here, you can expect to see cool websites!</h3>
+                <h2>Hello & welcome to my personal portfolio<br><span>Data Entry Clerk & Web Programming</span></h2>
                 <a href="#projects" class="main-btn">View my work</a>
             </div>
         </section>
