--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         
         <section class="main">
             <div>
-                <h2>Hello & welcome to my personal portfolio<br><span>Data Entry Clerk &<br>Web Programming<br></span></h2>
+                <h2>Hello & welcome to my personal portfolio<br><span>Data Entry Clerk &<br>Web Programming<be><br></span></h2>
                 <a href="#projects" class="main-btn">View my work</a>
             </div>
         </section>
